--- a/adminpro-angular7-lite/Angular/src/app/shared/header-navigation/navigation.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/shared/header-navigation/navigation.component.html
@@ -26,8 +26,8 @@
     <!-- Profile -->
     <!-- ============================================================== -->
     <li class="nav-item dropdown" ngbDropdown placement="bottom-right"  *ngIf="admin || user">
-        <a ngbDropdownToggle class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src={{img}} alt="user" class="profile-pic" /></a>
-        <div class="dropdown-menu animated slideInDown" ngbDropdownMenu>
+        <a ngbDropdownToggle class="nav-link dropdown-toggle prueba text-muted waves-effect waves-dark" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src={{img}} alt="user" class="profile-pic" /></a>
+        <div class="dropdown-menu animated prueba" style="transform: translate(0px, 0px)" ngbDropdownMenu id="prueba">
             <ul class="dropdown-user">
                 <li>
                     <div class="dw-user-box">
