--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.css
@@ -28,3 +28,15 @@ button[mat-icon-button]{
     color: #00bbf2;
     float: right;
 }
+
+.resolucionImagen{
+    width: 100%;
+    height:800px
+}
+
+@media only screen and (max-width: 992px){
+    .resolucionImagen{
+        width: 100%;
+        height:400px
+    }
+}
