--- a/adminpro-angular7-lite/Angular/src/app/shared/header-navigation/header.css
+++ b/adminpro-angular7-lite/Angular/src/app/shared/header-navigation/header.css
@@ -1,8 +1,14 @@
 @media only screen and (max-width: 992px) {
    
-        .prueba{
-            transform: translate(0px, 0px);
+        #prueba{
+            -webkit-transition: all 0.3s !important;
+            -moz-transition: all 0.3s !important;
+            -ms-transition: all 0.3s !important;
+            -o-transition: all 0.3s !important;
+            transition: all 0.3s !important;
+            transform: translate(0px, 0px) !important;
             left: 0;
+            top: initial !important;
         }
     
     .OcultarMovil {
