cosas resueltas to flama

--- a/adminpro-angular7-lite/Angular/src/app/component/inicio/inicio.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/inicio/inicio.component.html
@@ -40,8 +40,5 @@
 					</p>
 				</div>
 				<div class="col-md-5">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d374.0572068610566!2d-6.007317625966195!3d37.380409423792194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126c6a6fd0990f%3A0x448eb556f306897f!2sSalesianos+Triana!5e0!3m2!1ses!2ses!4v1550482988652" width="600" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-				</div>
-				<div>
-					<button class="btn btn-danger">Ver Más</button>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d374.0572068610566!2d-6.007317625966195!3d37.380409423792194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126c6a6fd0990f%3A0x448eb556f306897f!2sSalesianos+Triana!5e0!3m2!1ses!2ses!4v1550482988652" width="100%" height="150%" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
