--- a/adminpro-angular7-lite/Angular/src/app/component/inicio/inicio.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/component/inicio/inicio.component.css
@@ -15,6 +15,16 @@ img {
     margin: 0 auto;
     float: left;
     margin-left: 5%;
+    height: 200px;
+}
+
+@media only screen and (max-width: 992px) {
+    .col-md-5 {
+        margin: 0 auto;
+        float: left;
+        margin-left: 5%;
+        height: 100%;
+    }
 }
 
 button {
@@ -25,11 +35,6 @@ button {
     margin-left: auto;
     margin-right: auto;
     margin-top: 10%;
-}
-
-#mapid {
-
-    height: 180px; 
 }
 
 
